# term2

./: .gitignore  .gitmodules  README.md  a.out  req.txt  test.cpp  test.out
Horizons/: poroshochek.csv  python.ipynb  кточка_3 532.csv  порошок.csv
MQO/: NLI 19-02-2026.ipynb  chetotam.ipynb  noise–cancelation.py
MQO/Danya_Model/: Main-Copy1.ipynb
MQO/chet_sovpadeni/: HOM_measurement_add-offsets+arrayoffsets.py  HOM_measurement_add-offsets_fixed.py  (+1 more)
contest1/: taskA.cpp  taskA.out  taskB.cpp  taskB.out  taskE.cpp  taskF.cpp
contest2/: taskA  taskC  taskG  taskH.cpp  taskI.cpp
cppLabs/: a.out  bin_poisk  bin_poisk.cpp  bin_poisk.csv  poisk  poisk.cpp  python.ipynb  smart_poisk.cpp  sum_poisk  sum_poisk.cpp  sum_poisk.csv  sum_poisk_bin  sum_poisk_bin.cpp
labs/: 213.ipynb  calc.ipynb  template.ipynb
lec1/: cheto.cpp  lec2.cpp
my/: calc.ipynb  config.json  kuznechik.ipynb  sound.py
sems/: dynara  heap.cpp  sem3.cpp  sem4.cpp  sorts  sorts.cpp
term3/: grid3.hpp  labs.ipynb
term3/sems/rtx/: CMakeLists.txt  my_image.ppm  vec3.cpp  vec3.h
term3/sems/rtx/include/: camera.h  geometry.h  image.h  scene.h  vec3.h
term3/sems/rtx/src/: camera.cpp  main.cpp  ray.cpp  vec3.cpp
term3/sems/week3/task1/: CMakeLists.txt
term3/sems/week3/task1/include/: utils.h
term5/: CPA_Presentation_English_Maine1988.pptx  calculator.ipynb
vpv/: T(t).ipynb  log_2_7_150.csv  log_2_7_300.csv  log_2_7_400.csv  log_2_7_450.csv  log_2_7_500.csv  log_2_7_600.csv  log_2_7_650.csv  log_2_8_20.csv  log_4_300.csv  log_5_300.csv  log_9_300.csv  main.py
vpv3/: calc.ipynb
(+590 files in other folders)
